--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.3'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.joanzapata.android:android-iconify:1.0.9'
+    compile 'de.u-mass:lastfm-java:0.1.2'
 }
 
 play {
