--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,8 @@ dependencies {
     compile 'com.android.support:leanback-v17:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.squareup.picasso:picasso:2.4.0'
-    compile 'com.spotify.sdk:spotifysdk:1.0.0-beta8@aar'
+    compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar'
+    compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
