Details view for Album and Playlist

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
 
         <activity android:name=".activities.SearchActivity"/>
         <activity android:name=".activities.ArtistsAlbumsActivity"/>
+        <activity android:name=".activities.AlbumActivity"/>
+        <activity android:name=".activities.PlaylistActivity"/>
 
         <provider
             android:name=".providers.SearchProvider"
