BUGFIX feature leanback is not required (to support non Android TV devices)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
             android:required="false"/>
     <uses-feature
             android:name="android.software.leanback"
-            android:required="true"/>
+            android:required="false"/>
 
     <uses-feature
             android:name="android.hardware.microphone"
