--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".activities.ArtistsAlbumsActivity"/>
         <activity android:name=".activities.AlbumActivity"/>
         <activity android:name=".activities.CategoryActivity"/>
+        <activity android:name=".activities.NowPlayingActivity"/>
         <activity android:name=".activities.PlaylistActivity"/>
 
         <provider
