--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,22 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'play'
 
 buildscript {
 
     repositories {
         mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'com.github.triplet.gradle:play-publisher:1.0.2'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -62,6 +70,9 @@ dependencies {
     compile 'com.squareup:otto:1.3.6'
     compile 'com.joanzapata.android:android-iconify:1.0.9'
     compile 'de.u-mass:lastfm-java:0.1.2'
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.1@aar') {
+        transitive = true;
+    }
 }
 
 play {
