--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'play'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
-
-apply plugin: 'play'
 
 buildscript {
 
@@ -27,17 +26,20 @@ android {
     signingConfigs {
         release
     }
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.sregg.android.tv.spotify"
         minSdkVersion 17
-        targetSdkVersion 21
+        targetSdkVersion 22
         renderscriptTargetApi 17
         renderscriptSupportModeEnabled true
         versionCode 10
         versionName "1.8"
+
+        // runner for espresso
+        testInstrumentationRunner "com.sregg.android.tv.spotify.testUtils.RxAndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -56,23 +58,49 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:21.0.3'
-    compile 'com.android.support:leanback-v17:21.0.3'
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.squareup.picasso:picasso:2.4.0'
+
+    // support libraries
+    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:leanback-v17:22.2.1'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:palette-v7:22.2.1'
+
+    // rx
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'io.reactivex:rxandroid:1.0.1'
+
+    // spotify
     compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar'
     compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.2.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile project(':spotify-web-api-android')
-    compile 'com.android.support:palette-v7:21.0.3'
+
+    // retrofit okhttp
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
+
+    compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.joanzapata.android:android-iconify:1.0.9'
     compile 'de.u-mass:lastfm-java:0.1.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.1@aar') {
         transitive = true;
     }
+
+    // testing
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2'
+    androidTestCompile 'com.squareup.spoon:spoon-client:1.1.9'
+    androidTestCompile 'com.squareup.okhttp:mockwebserver:2.4.0'
+}
+
+configurations {
+    androidTestCompile.exclude group: 'com.android.support', module: 'support-v4'
+    androidTestCompile.exclude group: 'com.android.support', module: 'recyclerview-v7'
+    androidTestCompile.exclude group: 'com.android.support', module: 'support-annotations'
 }
 
 play {
