--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,6 @@ test:
     # run tests against the emulator using spoon.
     - ./gradlew spoonDebugAndroidTest
     # copy the build outputs to artifacts
-    - cp -r spotify-tv/app/build/outputs $CIRCLE_ARTIFACTS
+    - cp -r $HOME/spotify-tv/app/build/outputs $CIRCLE_ARTIFACTS
     # copy the test results to the test results directory.
-    - cp -r spotify-tv/app/build/spoon/* $CIRCLE_TEST_REPORTS
+    - cp -r $HOME/spotify-tv/app/build/spoon/* $CIRCLE_TEST_REPORTS
