--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ test:
     # wait for it to have booted
     - circle-android wait-for-boot
     # run tests against the emulator using spoon.
-    - ./gradlew spoonExtraPermsDebugAndroidTest
+    - ./gradlew spoonDebugAndroidTest
     # copy the build outputs to artifacts
     - cp -r $HOME/spotify-tv/app/build/outputs $CIRCLE_ARTIFACTS
     # copy the test results to the test results directory.
