--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,9 @@ dependencies:
 test:
   override:
     # start the emulator
-    - emulator -avd circleci-android22 -no-audio -no-window
+    - emulator -avd circleci-android22 -no-audio -no-window:
+      background: true
+      parallel: true
     # wait for it to have booted
     - circle-android wait-for-boot
     # run tests against the emulator using spoon.
