TESTING circleci stuff...

--- a/circle.yml
+++ b/circle.yml
@@ -14,8 +14,10 @@ test:
         parallel: true
     # wait for it to have booted
     - circle-android wait-for-boot
+    # uninstall app
+    - adb uninstall com.sregg.android.tv.spotify
     # run tests against the emulator using spoon.
-    - ./gradlew spoonDebugAndroidTest
+    - ./gradlew spoonDebugAndroidTest --debug
     # copy the build outputs to artifacts
     - cp -r $HOME/spotify-tv/app/build/outputs $CIRCLE_ARTIFACTS
     # copy the test results to the test results directory.
