library spotify-web-api-android as a git submodule

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,20 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# copied from libraries/spotify-web-api-android/gradel.properties
+BASE_NAME=spotify-web-api-android
+VERSION_NAME=0.1.1
+GROUP=com.spotify.android
+
+# Deps for gradle
+ANDROID_GRADLE_PLUGIN_VERSION=1.2.3
+ROBOLECTRIC_GRADLE_PLUGIN_VERSION=1.1.0
+SDKMANAGER_GRADLE_PLUGIN_VERSION=0.12.+
+
+# Deps for libraries
+FEST_ASSERT_CORE_VERSION=2.0M10
+GUAVA_VERSION=18.0
+JUNIT_VERSION=4.12
+MOCKITO_CORE_VERSION=1.+
+ROBOLECTRIC_VERSION=2.4
