--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     // spotify
     compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar'
     compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar'
-    compile project(':spotify-web-api-android')
+    compile project(':spotify-api')
 
     // retrofit okhttp
     compile 'com.squareup.retrofit:retrofit:1.9.0'
