--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app'
-include ':spotify-web-api-android'
-project(':spotify-web-api-android').projectDir = new File('libraries/spotify-web-api-android')
+include ':spotify-api'
+project(':spotify-api').projectDir = new File('libraries/spotify-web-api-android/spotify-api')
