--- a/circle.yml
+++ b/circle.yml
@@ -17,6 +17,8 @@ test:
         parallel: true
     # wait for it to have booted
     - circle-android wait-for-boot
+    # wait a little longer, just in case :)
+    - sleep 30
     # uninstall app
     - adb uninstall com.sregg.android.tv.spotify
     # run tests against the emulator using spoon.
