--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,17 +28,17 @@ android {
     signingConfigs {
         release
     }
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.sregg.android.tv.spotify"
+        applicationId "com.sregg.android.tv.player.spotify"
         minSdkVersion 17
-        targetSdkVersion 22
+        targetSdkVersion 23
         renderscriptTargetApi 17
         renderscriptSupportModeEnabled true
-        versionCode 15
-        versionName "1.13"
+        versionCode 1
+        versionName "1.0"
 
         // runner for espresso
         testInstrumentationRunner "com.sregg.android.tv.spotify.testUtils.RxAndroidJUnitRunner"
@@ -58,22 +58,24 @@ android {
     }
 }
 
+def androidSupportVersion = '23.1.0'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // support libraries
-    compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'com.android.support:leanback-v17:22.2.1'
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:palette-v7:22.2.1'
+    compile "com.android.support:recyclerview-v7:${androidSupportVersion}"
+    compile "com.android.support:leanback-v17:${androidSupportVersion}"
+    compile "com.android.support:appcompat-v7:${androidSupportVersion}"
+    compile "com.android.support:palette-v7:${androidSupportVersion}"
 
     // rx
     compile 'io.reactivex:rxjava:1.0.14'
     compile 'io.reactivex:rxandroid:1.0.1'
 
     // spotify
-    compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar'
-    compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar'
+    compile 'com.spotify.sdk:spotify-player:1.0.0-beta11@aar'
+    compile 'com.spotify.sdk:spotify-auth:1.0.0-beta11@aar'
     compile project(':spotify-api')
 
     // retrofit okhttp
