Add intellij files to gitignore
Used gitignore.io to generate gitignore config for intelli

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,43 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
+/.idea/*
 /.idea/libraries
 .DS_Store
 /build
 release.properties
 fabric.properties
+
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
