--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,24 @@
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-apply plugin: 'play'
+apply plugin: 'com.github.triplet.play'
 apply plugin: 'spoon'
+apply plugin: 'com.github.ben-manes.versions'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
 buildscript {
-
     repositories {
-        mavenCentral()
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'com.github.triplet.gradle:play-publisher:1.0.2'
+        classpath 'com.github.triplet.gradle:play-publisher:1.1.4'
         classpath 'io.fabric.tools:gradle:1.+'
         classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.2'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
     }
 }
 
@@ -29,7 +30,7 @@ android {
         release
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.sregg.android.tv.spotifyPlayer"
@@ -58,8 +59,9 @@ android {
     }
 }
 
-def androidSupportVersion = '23.0.1'
+def androidSupportVersion = '23.3.0'
 
+//check for updates with ./gradlew dependencyUpdates -Drevision=release
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
