Filter out x64 native libs
The spotify sdk doesn't currently support x64 architectures. x64 android systems can use x32 libs, but for some reason the new gradle plugin does not package the native libs correctly, which causes a crash.

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ BASE_NAME=spotify-web-api-android
 VERSION_NAME=0.1.1
 GROUP=com.spotify.android
 
+android.useDeprecatedNdk=true
+
 # Deps for gradle
 ANDROID_GRADLE_PLUGIN_VERSION=1.2.3
 ROBOLECTRIC_GRADLE_PLUGIN_VERSION=1.1.0
