--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,12 @@ android {
 
         // runner for espresso
         testInstrumentationRunner "com.sregg.android.tv.spotifyPlayer.testUtils.RxAndroidJUnitRunner"
+
+        ndk {
+            abiFilters "armeabi-v7a", "x86", "armeabi"
+        }
     }
+
     buildTypes {
         release {
             signingConfig signingConfigs.release
@@ -51,6 +56,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     repositories {
         mavenCentral()
         flatDir {
