Upgrade to Android gradle plugin 2.1.0
- set gradle property for the Gradle daemon's maximum heap size to 2gb, so that dexing in process is enabled to make incremental and full builds faster

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,9 @@ BASE_NAME=spotify-web-api-android
 VERSION_NAME=0.1.1
 GROUP=com.spotify.android
 
+#enables dexing in process
+org.gradle.jvmargs = -Xmx2048m
+
 android.useDeprecatedNdk=true
 
 # Deps for gradle
