Debug build now has unique package name to allow for both debug and release be installed side by side

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            applicationIdSuffix ".debug"
+        }
+
         release {
             signingConfig signingConfigs.release
             minifyEnabled false
